bon/tests/integration/ui/compile_fail/overwritable/attr_on.rs
use bon::builder;

#[builder(on(String, overwritable))]
fn unnecessary_overwritable(#[builder(overwritable)] _x: String) {}

fn main() {}
